<resources>
    <string name="app_name">SwipeAssignment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prompt_spinner">Select Product Type</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="product_image_content_description">product image</string>
    <string name="upload_product_image">Upload Product Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="price">Price</string>
    <string name="tax">Tax</string>
    <string name="add_product">Add Product</string>
</resources>